Update README image & Add css vendor prefixes

--- a/style.css
+++ b/style.css
@@ -1,13 +1,8 @@
 /*
-
-headings : Georgia
-text : Lato
-
-green : #01996D
-darkgreen : #245852
-nav black : #292929
-paragraph black : 424242
-
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
 */
 
 @import url("https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@500;700&family=Lato:wght@300;400;700;900&display=swap");
@@ -23,6 +18,7 @@ paragraph black : 424242
 * {
   margin: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -62,9 +58,15 @@ nav {
 }
 
 nav .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   padding: 1em 0;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -76,9 +78,17 @@ nav .container a h1 {
 
 nav .container ul {
   list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-flex: 2;
+  -ms-flex: 2;
   flex: 2;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   margin: 0 3em;
 }
@@ -88,9 +98,17 @@ li a {
 }
 
 .cta {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
   flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
   justify-content: flex-end;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -116,8 +134,15 @@ header {
 
 header .container {
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
 
@@ -145,11 +170,14 @@ header .container p span {
 }
 
 header .container .btn {
+  width: -webkit-fit-content;
   width: fit-content;
   width: -moz-fit-content;
 }
 
 main .header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   padding: 4em 0;
   margin-top: 4em;
@@ -157,6 +185,8 @@ main .header {
 
 .header-left,
 .header-right {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
   flex: 1;
 }
 
@@ -169,14 +199,20 @@ h3 span.number {
 }
 
 .header-right {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
 /* Main Grid Section */
 
 .main-grid {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 5em 1fr 5em 1fr;
   grid-template-columns: repeat(3, 1fr);
   gap: 5em;
   min-height: 90vh;
@@ -229,8 +265,15 @@ section h4.three:before {
 }
 
 .main-grid section:nth-child(2) {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   margin-top: 16em;
 }
@@ -259,12 +302,16 @@ section.bg-sec {
 }
 
 .bg-sec .container {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 1.5fr;
   grid-template-columns: 1fr 1.5fr;
   padding: 10em 0;
 }
 
 .bg-left {
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
   align-self: center;
 }
 
@@ -288,8 +335,14 @@ section.bg-sec {
 
 .video-player {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
   justify-content: flex-end;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -308,7 +361,9 @@ section.bg-sec {
 /* white section */
 
 section .white-sec {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 1em 1fr;
   grid-template-columns: 1fr 1fr;
   gap: 1em;
   padding: 12em 0;
@@ -323,7 +378,11 @@ section .white-sec {
 }
 
 .white-left {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
   justify-content: flex-end;
   position: relative;
 }
@@ -338,6 +397,7 @@ section .white-sec {
 
 .left-image img {
   max-height: 26rem;
+  -o-object-fit: contain;
   object-fit: contain;
 }
 
@@ -346,9 +406,18 @@ section .white-sec {
 .left-card {
   max-width: 20rem;
   max-height: 19rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   padding: 1.5em 2em;
   position: absolute;
@@ -356,6 +425,7 @@ section .white-sec {
   bottom: -15%;
   background-color: white;
   border-radius: 0.2em;
+  -webkit-box-shadow: -1px 1px 4px 4px rgba(0, 0, 0, 0.1);
   box-shadow: -1px 1px 4px 4px rgba(0, 0, 0, 0.1);
 }
 
@@ -398,8 +468,14 @@ footer {
 
 footer .container {
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -ms-flex-pack: distribute;
   justify-content: space-around;
 }
 
@@ -412,8 +488,14 @@ footer h1 {
 footer ul {
   list-style: none;
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -ms-flex-pack: distribute;
   justify-content: space-around;
 }
 
